# heuristic-track-pace-2024

./: .gitignore  LICENSE  README.md
heuristic_solver_eweidner/: Cargo.toml  test.out  test4.out
heuristic_solver_eweidner/src/: heuristic_solver.rs  interconnection.rs  main.rs  pengraph.rs  problem.rs  utils.rs
heuristic_solver_eweidner/target 2/: .rustc_info.json
heuristic_solver_eweidner/target 2/submit/.fingerprint/libc-a70d2a13267e0c48/: build-script-build-script-build  build-script-build-script-build.json
heuristic_solver_eweidner/target 2/submit/.fingerprint/signal-hook-68948b326e4ef24c/: build-script-build-script-build  build-script-build-script-build.json
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/cfg-if-d817a11f9c4fb1be/: lib-cfg-if  lib-cfg-if.json
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/getrandom-25f0e1ebbb10e22e/: lib-getrandom  lib-getrandom.json
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/heuristic_solver_eweidner-a9b115e6236fb392/: output-bin-heuristic_solver_eweidner
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/libc-7027c7bad9d2d77c/: run-build-script-build-script-build  run-build-script-build-script-build.json
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/libc-be0f6a098e597769/: lib-libc  lib-libc.json
heuristic_solver_eweidner/target 2/x86_64-unknown-linux-musl/submit/.fingerprint/ppv-lite86-3b66d547314fe322/: lib-ppv-lite86  lib-ppv-lite86.json
(+12 files in other folders)
