[package]
name = "heuristic_solver_eweidner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.submit]
inherits = 'release'

[target.x86_64-unknown-linux-musl]
linker = "/opt/homebrew/bin/x86_64-unknown-linux-musl-gcc"


[dependencies]
signal-hook = "*"
peak_alloc = "0.2.0"